Lots of changes related to cleaning code (there were some unused/unecessary functions)
Ogre and club now once again go to $ mode when on top of key